--- a/src/components/ToDo.css
+++ b/src/components/ToDo.css
@@ -36,6 +36,7 @@
     justify-content: space-between;
     background-color: blueviolet;
     margin: 0 10px;
+    margin-bottom: 10px;
     border: 1px solid none;
     border-radius: 15px;
     height: 40px;
